Changes for 4.0.0alpha4

New features:
..F....... [ZBXNEXT-4150] implemented access to interactive elements using keyboard (Andzs, ashubin, gcalenko, vmurzins)
..F....... [ZBXNEXT-4149] implemented keybord interaction in overlay popups (miks)

Bug fixes:
..F....... [ZBX-13465] fixed back button style on the sub-maps (Andzs, ashubin)
..F....... [ZBX-13334] fixed translations of Widget parameters window (agriscenko)
A......... [ZBX-6118] fixed poor performance of changing an item on the template which linked with many hosts (Sasha)
..F....... [ZBX-13454] fixed placeholder in Administration->Scrits form (Sasha)

--------------------------------------------------------------------------------
Changes for 4.0.0alpha3

New features:
A......... [ZBXNEXT-4357] added support of "selectTriggerDiscovery" option in trigger.get method (Sasha)
A.F....... [ZBXNEXT-4152] replaced double box select fields with multiselect fields (Ivo, Sasha)
..F.I..... [ZBXNEXT-4273] added default event status colors in themes with option to customize them (ashubin)
...G...... [ZBXNEXT-4216] added 'copytruncate' log file rotation support for logrt[], logrt.count[] (Andris)

Bug fixes:
.......P.. [ZBX-13403] allowed proxy to execute remote commands on agents using encrypted connection (gleb)
.......PS. [ZBX-13441] fixed crashes in case of failures (e.g. timeouts) during VMware hypervisor discovery (gleb)
A.F....... [ZBX-12607] fixed performance of map.get API method and map-related views (miks, Sasha)
........S. [ZBX-11391] generated an error if expanding LLD macros results in an empty tag name (MVekslers)
..F....... [ZBX-13300] fixed addJsFile() name (agriscenko)
.......P.. [ZBX-13030] removed proxy's ability to export unprocessed history data via loadable modules (MVekslers)