@@ -1574,6 +1574,10 @@ footer {
 		}
 	}
 
+	.table-forms-td-right {
+		position: relative;
+	}
+
 	h4 {
 		margin-bottom: -5px;
 	}
